@@ -20,8 +20,8 @@ CPPCHECK_INC = \
   -I$(top_srcdir)/include
 
 CPPCHECK_SUPPRESS = \
-  --suppress='unusedStructMember:examples/multiboot2_header_macro.c' \
-  --suppress='unusedStructMember:tests/test_multiboot2_info_*.c'
+  --suppress='unusedStructMember:$(top_srcdir)/examples/multiboot2_header_macro.c' \
+  --suppress='unusedStructMember:$(top_srcdir)/tests/test_multiboot2_info_*.c'
 
 CPPCHECK_PATHS = \
   $(top_builddir)/examples \
